change default color to noisebridge red+ title

--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,4 +1,4 @@
-hello
+<h1>Flaschen Taschen typewriter! Say something:</h1>
 
 <%=form_tag do -%>
 	<%= text_field_tag :text %>
@@ -9,7 +9,7 @@ hello
 
 	<% javascript_include_tag "jscolor.js" => true %>
 	<!-- <script src="jscolor.js"></script> -->
-	Color: <input class="jscolor" value="ab2567" name="color">
+	Color: <input class="jscolor" value="ed1c24" name="color">
 	
 	<div>
 		<%= submit_tag "Go" %> 
