changes with Miloh, now working: hard code -l + -o to play once and it automatically kills the server

--- a/app/views/texts/index.html.erb
+++ b/app/views/texts/index.html.erb
@@ -1,5 +1,8 @@
-<h1>I am Flaschen Taschen typewriter</h1>
-<h2>Say something:</h2>
+<header>
+<!-- 	<img src="assets/images/ft.jpg" height= 90px alt="Flaschen Taschen awesome logo"> -->
+	<h1>I am Flaschen Taschen typewriter</h1>
+	<h2>Say something:</h2>
+</header>
 
 <%=form_tag do -%>
 	<%= text_field_tag :text %>
